--- a/index.html
+++ b/index.html
@@ -21,13 +21,25 @@
         <p>You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that work.
           That's why I
           am learning and mastering web development. I will not stop until I become the Web Development Hero.</p>
-        <a class="link-button" target="blank" href="https://www.linkedin.com/in/md-zahidhasan-hn-b73290221/">HIRE
-          ME</a>
-
-
-        </ol>
+        <a class="link-button" target="blank" href="https://www.linkedin.com/in/md-zahidhasan-hn-b73290221/">HIRE ME</a>
       </div>
       <div class="half-width"><img src="images/zahid hn.jpg" alt=""></div>
+    </section>
+    <br>
+    <section class="dream-big">
+      <div class="half-width">
+        <img src="images/zahid hn 2.jpg" alt="">
+      </div>
+      <div class="half-width">
+        <h1>Dream Big</h1>
+        <h2>Become a web developer</h2>
+        <p>I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma how to make simple
+        website. My goal is to build 3 websites and learn advanced topics.</p>
+        <a class="link-button" target="blank" href=" ">DOWNLOAD RESUME</a>
+
+
+      </div>
+
     </section>
   </body>
 
